# SALA193

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: character_model.md  narrative_rules.md  quickstart.md  requirements.md  rpg_architecture.md  simulation_loop.md  specs.md
examples/characters/: joao.yaml  samuel.yaml
examples/scenarios/: first_room.yaml
sala193/: __init__.py  actions.py  agents.py  cli.py  engine.py  gamemaster.py  llm_agent.py  memory.py  models.py  narrator.py  rules.py
tests/: test_agents_and_gamemaster.py  test_engine.py  test_llm_agent.py  test_models.py
