[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sala193"
version = "0.1.0"
description = "A simulation-first narrative engine for 193 fictional AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Álvaro Alencar" }
]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
sala193 = "sala193.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["sala193*"]
